<?xml version="1.0"?>
<package format="3">
  <name>arm_control</name>
  <version>0.1.0</version>
  <description>Safe bring-up control stack for the modular robot arm.</description>

  <maintainer email="godfrey.robotics@gmail.com">Daniel Godfrey</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
