[metadata]
name = arm_control
version = 0.1.0
author = Daniel Godfrey
author_email = godfrey.robotics@gmail.com
description = Safe bring-up control stack for the modular robot arm.
license = GPL-3.0
license_files = LICENSE

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    std_msgs
    PyYAML
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    arm_driver = arm_control.arm_driver:main
    arm_keyboard_teleop = arm_control.keyboard_teleop:main
