<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro and RViz visualization for the modular robot arm.</description>

  <maintainer email="godfrey.robotics@gmail.com">Daniel Godfrey</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
